Work on xyz2cif parser and workchains
Parser
1) Place it into aiida_ddec/utils folder
2) Make it simpler and more robust
3) Remove ase and pycifrw dependencies
4) Included Zn-MOF-74 example (quick to run)
5) Included examples/output output cifs with ddec charges

Workchains
1) Cp2kDdecWorkChain expose structure_ddec from DdecCalculation (possible in aiida-core>=1.0.0b6)
2) Move workchain utils to aiida_ddec/utils folder
3) Use WorkflowFactory to load workchains

Other:
1) Bump pre-commit dependencies

--- a/.pylintrc
+++ b/.pylintrc
@@ -281,7 +281,7 @@ redefining-builtins-modules=six.moves,future.builtins
 [MISCELLANEOUS]
 
 # List of note tags to take in consideration, separated by a comma.
-notes=FIXME,XXX
+notes=FIXME,XXX,TODO
 
 
 [TYPECHECK]
