--- a/.pylintrc
+++ b/.pylintrc
@@ -20,6 +20,10 @@ ignore-patterns=
 # Use multiple processes to speed up Pylint.
 jobs=1
 
+# List of plugins (as comma separated values of python modules names) to load,
+# usually to register additional checkers.
+load-plugins=pylint_django
+
 # Pickle collected data for later comparisons.
 persistent=yes
 
@@ -46,7 +50,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=bad-continuation,locally-disabled,useless-suppression,django-not-available,bad-option-value
+disable=bad-continuation,locally-disabled,useless-suppression,django-not-available,bad-option-value,logging-format-interpolation,no-else-raise,useless-object-inheritance
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -281,7 +285,7 @@ redefining-builtins-modules=six.moves,future.builtins
 [MISCELLANEOUS]
 
 # List of note tags to take in consideration, separated by a comma.
-notes=FIXME,XXX
+notes=FIXME,XXX,TODO
 
 
 [TYPECHECK]
