Updates for aiida 2.0 (#26)
* CI: Switch to GitHub actions services.
* CI: bump python version from 3.7 to 3.8.
* Test against aiida develop branch.
* Remove use of private repository API.
* Add report when cp2k output parser fails.
* Relax upper aiida version constraint to <3.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,30 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
         backend: ['django']
+        aiida-version: ['stable', 'develop']
+
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_DB: test
+          POSTGRES_PASSWORD: ''
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+      rabbitmq:
+        image: rabbitmq:latest
+        ports:
+          - 5672:5672
+
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -18,15 +40,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install system dependencies
+    - name: Install aiida develop version
       run: |
-        wget -O - "https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc" | sudo apt-key add -
-        echo 'deb https://dl.bintray.com/rabbitmq-erlang/debian bionic erlang' | sudo tee -a /etc/apt/sources.list.d/bintray.rabbitmq.list
-        echo 'deb https://dl.bintray.com/rabbitmq/debian bionic main' | sudo tee -a /etc/apt/sources.list.d/bintray.rabbitmq.list
-        sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list
-        sudo apt update
-        sudo apt install postgresql-10 rabbitmq-server graphviz
-        sudo systemctl status rabbitmq-server.service
+        pip install git+git://github.com/aiidateam/aiida-core
+      if: ${{ matrix.aiida-version == 'develop' }}
 
     - name: Install python dependencies
       run: |
@@ -53,10 +70,10 @@ jobs:
 #    timeout-minutes: 15
 #    steps:
 #    - uses: actions/checkout@v1
-#    - name: Set up Python 3.7
+#    - name: Set up Python 3.8
 #      uses: actions/setup-python@v1
 #      with:
-#        python-version: 3.7
+#        python-version: 3.8
 #    - name: Install python dependencies
 #      run: |
 #        pip install --upgrade pip
@@ -70,14 +87,14 @@ jobs:
     timeout-minutes: 15
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install python dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[pre-commit,testing]
+        pip install -e .[pre-commit,testing,cp2k]
         reentry scan -r aiida
     - name: Run pre-commit
       run: |
