--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,29 @@
 # # Install pre-commit hooks via
 # pre-commit install
 
-# modernizer: make sure our code-base is Python 3 ready
 repos:
-- repo: https://github.com/python-modernize/python-modernize.git
-  rev: a234ce4e185cf77a55632888f1811d83b4ad9ef2
-  hooks:
-  - id: python-modernize
-    exclude: ^docs/
-    args:
-      - --write
-      - --nobackups
-      - --nofix=dict_six
 
-- repo: https://github.com/pre-commit/mirrors-yapf
-  rev: v0.30.0
-  hooks:
-  # yapf = yet another python formatter
-  - id: yapf
-    name: yapf
-    types: [python]
-    exclude: >
-      (?x)^(
-          docs/.*|
-      )$
-    args: ['-i']
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort (python)
 
-- repo: local
-  hooks:
-    # pylint: static code analysis
-  - id: pylint
-    name: pylint
-    entry: pylint
-    types: [python]
-    language: system
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+      - id: black
+        # It is recommended to specify the latest version of Python
+        # supported by your project here, or alternatively use
+        # pre-commit's default_language_version, see
+        # https://pre-commit.com/#top_level-default_language_version
+        language_version: python3.10
+
+  - repo: local
+    hooks:
+      # pylint: static code analysis
+    - id: pylint
+      name: pylint
+      entry: pylint
+      types: [python]
+      language: system
