--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,20 +10,27 @@ name = "aiida-ddec"
 dynamic = ["version"]
 authors = [
     { name = "Aliaksandr Yakutovich", email = "aliaksandr.yakutovich@epfl.ch" },
+    { name = "Miriam Pougin", email = "miriam.pougin@epfl.ch" },
 ]
 description = "AiiDA plugin for DDEC code"
 classifiers = [
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 2.7",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Framework :: AiiDA",
     "Development Status :: 5 - Production/Stable",
+    "Framework :: AiiDA",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
+keywords = ['aiida', 'workflows']
+requires-python = '>=3.8'
 dependencies = [
-    "aiida-core>=1.1.0,<3",
+    "aiida-core[atomic_tools]~=2.3",
+    "aiida-cp2k~=2.0",
     "six",
     "voluptuous",
+    "importlib_resources",
 ]
 
 [project.license]
@@ -46,20 +53,23 @@ ddec = "aiida_ddec.parsers:DdecParser"
 "ddec.cp2k_ddec" = "aiida_ddec.workchains:Cp2kDdecWorkChain"
 
 [project.optional-dependencies]
-cp2k = [
-    "aiida-cp2k>=1.0.0",
-]
 pre-commit = [
-    "pre-commit~=2.2",
-    "pylint~=2.6.0",
+    'pre-commit~=3.3',
+    'black~=23.7',
+    'isort~=5.12',
+    'pylint~=2.17',
 ]
-testing = [
+tests = [
     "pgtest~=1.3.1",
     "aiida-testing-dev==0.1.0.dev1",
     "pytest-cov~=2.7",
     "pytest~=6.0",
 ]
 
+[tool.black]
+line-length = 120
+target-version = ['py310']
+include = '\.pyi?$'
 
 [tool.pylint.format]
 max-line-length = 120
@@ -70,15 +80,12 @@ disable = [
     "duplicate-code",
 ]
 
-
 [tool.pytest.ini_options]
 addopts = "--durations=0 --cov=aiida_ddec"
 testpaths = [
     "tests",
-    "examples",
 ]
-# test also examples
-python_functions = "test_* run_*"
+python_functions = "test_*"
 python_files = "test_*.py"
 
 filterwarnings = [
@@ -88,14 +95,26 @@ filterwarnings = [
     "ignore::DeprecationWarning:babel:",
 ]
 
+[tool.isort]
+profile = "black"
 
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py38
-isolated_build = true
-[testenv:py{38,39,310,311}]
-extras = testing
-commands_pre = reentry scan -r aiida
+envlist =
+    py{39,310,311}
+    py38-pre-commit
+
+[testenv]
+description = Run the pytest tests
+usedevelop=True
+extras = tests
 commands = pytest {posargs}
+
+[testenv:py38-pre-commit]
+description = Run the pre-commit checks
+extras =
+    tests
+    pre-commit
+commands = pre-commit run {posargs}
 """
